# derive-into-owned

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: field_kind.rs  helpers.rs  lib.rs
tests/: borrowed.rs  generic_tuple_struct.rs  no_std.rs  opt_field.rs  simple_enum.rs  struct.rs  tuple_struct.rs  unit_struct.rs  variant_enum.rs  vec.rs
