[package]
name = "derive-into-owned"
version = "0.1.0"
authors = ["Joonas Koivunen <joonas.koivunen@gmail.com>"]
description = "Custom derives to help with types containing Cow fields"
license = "MIT"
repository = "https://github.com/koivunej/derive-into-owned"
homepage = "https://github.com/koivunej/derive-into-owned"

[lib]
proc-macro = true

[dependencies]
syn = "0.11"
quote = "0.3"
